Resolves tdf#101142 - Always use a white background for print preview

Change-Id: Ib60ca1c5de5eb17008cc5ddc04ae4fccfe373b29
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183541
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>